--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "robot_localization"]
 	path = robot_localization
 	url = https://github.com/acejang1994/robot_localization.git
+[submodule "computer_vision"]
+	path = computer_vision
+	url = https://github.com/acejang1994/computer_vision.git
